# PhuruCAD

./: .project  ArduinoModule.py  CMakeLists.txt  Init.py  InitGui.py  Phuru.dox  README.md
App/: AppPhuru.cpp  AppPhuruPy.cpp  CMakeLists.txt  PreCompiled.h
Avanzado/: Configuracion.py  PhConfiguracion.py  Ventanas.py  untitled.ui
Calibracion/: PhCalibracionAcelerometro.py  PhControlOrientacion.py  PhControlOrientacionTraslacion.py  PhCube.py  PhGiroscopo.py  PhGyroscope.py  PhSetParametros.py
Conectividad/: PhUSB.py  PhWifi.py  PhWifiConfiguracion.py  PhWifiEjecucion.py  Ventanas.py  mi_ventana.py  ventana.ui
Generales/: PhComandos.py  PhDashboard.py
Gui/: AppPhuruGui.cpp  AppPhuruGuiPy.cpp  CMakeLists.txt  Command.cpp  PreCompiled.h  Workbench.cpp  Workbench.h
Gui/Resources/: Phuru.qrc
Socket/: PhCliente.py  cliente.py  server.py
Vistas/: PhWCalibracionAcelerometro.py  PhWCalibracionAcelerometro.ui  PhWComandos.py  PhWComandos.ui  PhWConfiguracion.py  PhWControlOrientacion.py  PhWDashboard.py  PhWDashboard.ui  PhWSetParametros.py  PhWSetParametros.ui
